Fixes to bot webpage and procfile

--- a/htmlfor_bot/log.html
+++ b/htmlfor_bot/log.html
@@ -4,7 +4,6 @@
 <title>The Verse Bot</title>
 <link rel="icon" href = "favicon.ico">
 <link rel="stylesheet" href="styles.css">
-<h6>A html web for The Verse Discord Bot, internal use</h6>
 </head>
 <body>
 
@@ -12,7 +11,9 @@
   <a href="https://versebuilding.com/">Homepage</a>
   <a href="https://github.com/Versebuilding">Github</a>
 </div>
-<h1> Beginning of log </h1>
+<h1> The Verse Bot </h1>
+<h6>A html web for The Verse Discord Bot, internal use</h6>
+
 <div class="myDiv">
     <p id="log">Log should be shown here </p>
 </div>
