Small fixes and updates to html

--- a/htmlfor_bot/log.html
+++ b/htmlfor_bot/log.html
@@ -12,7 +12,7 @@
   <a href="https://github.com/Versebuilding">Github</a>
 </div>
 <h1> The Verse Bot </h1>
-<h6>A html web for The Verse Discord Bot, internal use</h6>
+<h2>An html web for The Verse Discord Bot, internal use</h2>
 
 <div class="myDiv">
     <p id="log">Log should be shown here </p>
